2003-04-10  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl:
	* ncgi.man:
	* ncgi.tcl: Fixed bug #614591. Set version of the package to to
	  1.2.2. Also fixed equivalnet of bug #648679.

2003-02-05  David N. Welton  <davidw@dedasys.com>

	* ncgi.tcl: Use string match instead of regexp.

2002-08-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.tcl: Updated 'info exist' to 'info exists'.

2002-08-15  David N. Welton  <davidw@dedasys.com>

	* ncgi.tcl (ncgi::setValueList): Fix [ 593254 ] ncgi::SetValue bug
	- SetValue now works correctly with multipart values with spaces
	in them.

2002-08-09  David N. Welton  <davidw@dedasys.com>

	* ncgi.test: Added two new tests for setValue.

	* ncgi.tcl (ncgi::multipart): Fix [ 564279 ] ncgi::multipart bug -
	commented out offending 'puts' statements.

2002-04-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.man: Added doctools manpage.

2002-01-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 1.2.1

2001-10-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.tcl (ncgi::redirect): Fixed bug #464560 reported by Ed
	  Rolfe <erolfe@users.sourceforge.net>. The proposed fix is not
	  used as it does not pass the testsuite. We check for the
	  existence of "env(REQUEST_URI)" instead, again, and use the
	  appropriate alternate information if it does not exist.

2001-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.n:
	* ncgi.test:
	* ncgi.tcl:
	* pkgIndex.tcl: Version up to 1.2

2001-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.tcl: Restricted export list to public API.
	  [456255]. Patch by Hemang Lavana
	  <hemanglavana@users.sourceforge.net>

2001-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.tcl: Added missing [global env]. Bug [458023].

2001-08-01  Jeff Hobbs  <jeffh@ActiveState.com>
