@@ -1,3 +1,10 @@
+2003-04-23  Andreas Kupries  <andreask@activestate.com>
+
+	* ncgi.man:
+	* ncgi.tcl: Added command [importFile] from tcllib patch
+	  611595. The command [tempfile] was relocated into fileutil
+	  instead.
+
 2003-04-10  Andreas Kupries  <andreask@activestate.com>
 
 	* pkgIndex.tcl:
